[build-system]
requires = [
    "hatchling", 
    "hatch-vcs",
    ]
build-backend = "hatchling.build"

[project]
name = "bspline-mutual-information"
description = "B-spline based mutual information estimator"
authors = [
    {name = "Yannick Mahlich", email = "yannick.mahlich@pnnl.gov"},
]
requires-python = ">=3.9"
dynamic = [
    "version",
    ]
dependencies = [
    "numpy",
    "scipy",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/bspline_mutual_information/_version.py"